--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -12,7 +12,6 @@ import { work } from "@cv"
           const startYear = new Date(startDate).getFullYear()
           const endYear =
             endDate != null ? new Date(endDate).getFullYear() : "Actual"
-
           return (
             <li>
               <article>
@@ -40,6 +39,7 @@ import { work } from "@cv"
                     </time>
                   </div>
                 </header>
+
 
                 <footer>
                   <p>{summary}</p>
@@ -117,11 +117,11 @@ import { work } from "@cv"
     border-radius: 6px;
   }
 
-  [data-title] {
-    position: relative;
-  }
-
   @media (width <= 700px) {
+    header :first-child {
+      max-width: 260px;
+    }
+
     time {
       text-align: right;
     }
