--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -1,5 +1,6 @@
 ---
 import GitHub from "@/icons/GitHub.astro"
+import Link from "@/icons/aelink.astro"
 import Section from "../Section.astro"
 
 import { projects } from "@cv"
@@ -15,13 +16,19 @@ import { projects } from "@cv"
               <article>
                 <header>
                   <h3>
-                    <a href={url} target="_blank" title={`Ver el proyecto ${name}`}>
-                      {name}
-                    </a>
+                    {name}
                     {isActive && <span>•</span>}
+                    {url && (
+                      <a
+                        href={url}
+                        target="_blank"
+                        title={`Ver el proyecto ${name}`}
+                      >
+                        <Link />
+                      </a>
+                    )}
                     {github && (
                       <a
-                        class="github-code-link"
                         href={github}
                         target="_blank"
                         title={`Ver código fuente del proyecto ${name}`}
@@ -72,16 +79,17 @@ import { projects } from "@cv"
   }
 
   article h3 {
-    font-size: .95em;
+    font-size: 1.1em;
     margin-bottom: 4px;
   }
 
   article a {
-    color: #111;
+    margin-left: 10px;
+    color: #777;
   }
 
   article a:hover {
-    text-decoration: underline;
+    text-decoration: none;
   }
 
   article p {
@@ -112,10 +120,6 @@ import { projects } from "@cv"
     font-size: 0.6rem;
     font-weight: 500;
     padding: 0.2rem 0.6rem;
-  }
-
-  .github-code-link {
-    margin-left: 5px;
   }
 
   img {
